--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                      <a class="nav-link" href="javascript:void(0);">Inicio</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="../voluntariado.html">Voluntariado</a>
+                     <a class="nav-link" href="voluntariado.html">Voluntariado</a>
                   </li>
                   <li class="nav-item ">
                      <a class="nav-link" href="#">Sana Sana</a>
