--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                      <div class="container-fluid" style="margin-bottom: 50px;">
                         <div class="row">
                            <div class="div_img_mision">
-                              <img src="images/seccion_mision_vision/Misión.svg" alt="" class="img_mision slideInRight">
+                              <img src="./images/seccion_mision_vision/Misión.svg" alt="" class="img_mision slideInRight">
                            </div>
                            <div class="col align-items-center mt-4">
                               <p style="font-size: 28px; color: #fff;" class="parrafo_mision">
