Actualizacion Modales Infografías

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                   </div>
                   <br>
                   <div class="button-container">
-                     <a href="#" class="button">Ver más</a>
+                     <a type="button" data-toggle="modal" data-target="#modalaccionrec" class="button">Ver más</a>
                   </div>
                </div>
                <!-- End Accion Rec -->
@@ -347,7 +347,7 @@
                   </div>
                   <br>
                   <div class="button-container">
-                     <a href="#" class="button">Ver más</a>
+                     <a type="button" data-toggle="modal" data-target="#modalcausahay" class="button">Ver más</a>
                   </div>
                </div>
                <!-- End Causa Hay -->
@@ -377,7 +377,7 @@
                   </div>
                   <br>
                   <div class="button-container">
-                     <a href="#" class="button">Ver más</a>
+                     <a type="button" data-toggle="modal" data-target="#modaldoname" class="button">Ver más</a>
                   </div>
                </div>
                <!-- End Dóname -->
@@ -1155,21 +1155,61 @@
             </div>
          </div>
       </div>
-      <!--  -->
-      <div class="modal fade" id="modalhazloxellos" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-         aria-hidden="true">
+      <!-- End Modales Memorias Institucionales -->
+      <!-- Start Modales Infografías -->
+      <!-- Modal Hazlo x Ellos -->
+      <div class="modal fade" id="modalhazloxellos" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
          <div class="modal-dialog" role="document">
             <div class="modal-content modales">
                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                <span aria-hidden="true">&times;</span>
                </button>
                <div class="modal-body">
-                  <iframe src="" width="100%" height="400px" loading="lazy" allow="autoplay"></iframe>
+                  <iframe src="./Infografias/Infografia Hazlo x ellos.pdf" width="100%" height="450px" loading="lazy" allow="autoplay"></iframe>
                </div>
             </div>
          </div>
       </div>
-      <!-- End Modales Memorias Institucionales -->
+      <!-- Modal Accion Rec -->
+      <div class="modal fade" id="modalaccionrec" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+         <div class="modal-dialog" role="document">
+            <div class="modal-content modales">
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+               <span aria-hidden="true">&times;</span>
+               </button>
+               <div class="modal-body">
+                  <iframe src="./Infografias/Infografia Acción Rec.pdf" width="100%" height="450px" loading="lazy" allow="autoplay"></iframe>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- Modal Causa Hay -->
+      <div class="modal fade" id="modalcausahay" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+         <div class="modal-dialog" role="document">
+            <div class="modal-content modales">
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+               <span aria-hidden="true">&times;</span>
+               </button>
+               <div class="modal-body">
+                  <iframe src="./Infografias/Infografia Causa Hay.pdf" width="100%" height="450px" loading="lazy" allow="autoplay"></iframe>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- Modal Dóname -->
+      <div class="modal fade" id="modaldoname" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+         <div class="modal-dialog" role="document">
+            <div class="modal-content modales">
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+               <span aria-hidden="true">&times;</span>
+               </button>
+               <div class="modal-body">
+                  <iframe src="./Infografias/Infografia Doname .pdf" width="100%" height="450px" loading="lazy" allow="autoplay"></iframe>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- End Modales Infografías -->
       <!-- END MODALES -->
       <!-- Start Pie De Página -->
       <footer>
