--- a/voluntariado.html
+++ b/voluntariado.html
@@ -149,7 +149,7 @@
                 </div>
                 <br>
                 <div class="button-container">
-                    <a href="#" class="button">Ver más</a>
+                    <a type="button" data-toggle="modal" data-target="#modalaccionrec" class="button">Ver más</a>
                 </div>
             </div>
             <!-- End Accion Rec -->
@@ -177,7 +177,7 @@
                 </div>
                 <br>
                 <div class="button-container">
-                    <a href="#" class="button">Ver más</a>
+                    <a type="button" data-toggle="modal" data-target="#modalcausahay" class="button">Ver más</a>
                 </div>
             </div>
             <!-- End Causa Hay -->
@@ -207,7 +207,7 @@
                 </div>
                 <br>
                 <div class="button-container">
-                    <a href="#" class="button">Ver más</a>
+                    <a type="button" data-toggle="modal" data-target="#modaldoname" class="button">Ver más</a>
                 </div>
             </div>
             <!-- End Dóname -->
@@ -549,6 +549,60 @@
         </div>
     </div>
     <!-- End Modales Nuestras Sedes -->
+    <!-- Start Modales Infografías -->
+      <!-- Modal Hazlo x Ellos -->
+      <div class="modal fade" id="modalhazloxellos" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+           <div class="modal-content modales">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+              <div class="modal-body">
+                 <iframe src="./Infografias/Infografia Hazlo x ellos.pdf" width="100%" height="450px" loading="lazy" allow="autoplay"></iframe>
+              </div>
+           </div>
+        </div>
+     </div>
+     <!-- Modal Accion Rec -->
+     <div class="modal fade" id="modalaccionrec" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+           <div class="modal-content modales">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+              <div class="modal-body">
+                 <iframe src="./Infografias/Infografia Acción Rec.pdf" width="100%" height="450px" loading="lazy" allow="autoplay"></iframe>
+              </div>
+           </div>
+        </div>
+     </div>
+     <!-- Modal Causa Hay -->
+     <div class="modal fade" id="modalcausahay" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+           <div class="modal-content modales">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+              <div class="modal-body">
+                 <iframe src="./Infografias/Infografia Causa Hay.pdf" width="100%" height="450px" loading="lazy" allow="autoplay"></iframe>
+              </div>
+           </div>
+        </div>
+     </div>
+     <!-- Modal Dóname -->
+     <div class="modal fade" id="modaldoname" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+           <div class="modal-content modales">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+              <div class="modal-body">
+                 <iframe src="./Infografias/Infografia Doname .pdf" width="100%" height="450px" loading="lazy" allow="autoplay"></iframe>
+              </div>
+           </div>
+        </div>
+     </div>
+     <!-- End Modales Infografías -->
 
     <!-- Start Pie De Página -->
     <footer>
